# sre-devops-env

./: Dockerfile  README.md  _env_test.py  app.py  inference.py  inference_out.txt  inference_out2.txt  models.py  openenv.yaml  pyproject.toml  requirements.txt  test_app.py  test_flask.py  test_out.txt  test_proxy.py  test_pydantic.py  validate_graders.py
server/: __init__.py  app.py  environment.py  graders.py  simulator.py
server/tasks/: __init__.py  easy.py  hard.py  medium.py
